Fixed issues with overflow of sidebar for some monitors.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1835,6 +1835,16 @@ body::-webkit-scrollbar-thumb{
     font-size: 1rem;
     line-height: 1.5rem;
   }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1954,6 +1964,26 @@ body::-webkit-scrollbar-thumb{
 
   .md\:pr-5 {
     padding-right: 1.25rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:text-9xl {
+    font-size: 8rem;
+    line-height: 1;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
 
@@ -2079,6 +2109,10 @@ body::-webkit-scrollbar-thumb{
     width: 66.666667%;
   }
 
+  .lg\:max-w-md {
+    max-width: 28rem;
+  }
+
   .lg\:flex-col {
     flex-direction: column;
   }
@@ -2159,6 +2193,11 @@ body::-webkit-scrollbar-thumb{
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .lg\:text-slate-500 {
